# granule

./: .dockerignore  .gitattributes  .gitignore  .hlint.yaml  .known-issues  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NX.gr  README.md  TESTING.md  TODO-nix-docker.md  Tue1.gr  Wed19.gr  Wed2-2.gr  Wed2.gr  add.gr  adding-new-graded-modalities.md  and.gr  append.gr  ast  benchmark.gr  bf.gr  cabal.project  cabal.project.freeze  case-prob.gr  changelog  drop.gr  exercises.gr  extract.gr  feb6-2.gr  feb6.gr  fibr.gr  fix.gr  flake.nix  flibr.gr  foo.gr  gbase.gr  (+30 more)
.github/workflows/: haskell.yml  hlint.yml
StdLib/: Array.gr  Arrow.gr  Bool.gr  Cake.gr  Cast.gr  Category.gr  Char.gr  Choice.gr  Coffee.gr  Combinators.gr  Contravariant.gr  DeqArray.gr  Dual.gr  Either.gr  Either.gri  Eq.gr  Existential.gr  File.gr  Fin.gr  Fix.gr  Foldable.gr  FoldableUtil.gr  Graph.gr  List.gr  Maybe.gr  Monad.gr  Nat.gr  Ord.gr  Par.gr  Parallel.gr  Prelude.gr  PropositionalEquality.gr  Result.gr  Semigroup.gr  Sequence.gr  Show.gr  Stack.gr  StandardInstances.gr  State.gr  Vec.gr  (+1 more)
app/: Main.hs
benchmark/: benchmarkList  granule-benchmark.cabal  package.yaml
benchmark/src/: Main.hs
benchmarks/: b-comp-cbn.gr  b-security.gr  b000-k.gr  b001-eitherInterval1.gr  b007-comp.gr  b007a-comp.gr  b008-disject.gr  b008a-disject.gr  b009-if.gr  b009-until.gr  b032-s.gr  flob.gr  fromMaybe.gr  hilbert.gr  log-2020-06-12-11-24  log-2020-06-12-11-25  log-2020-06-12-11-28  log-2020-06-12-11-42  log-2020-06-12-11-44  security.gr  share.gr
benchmarks/comp/: 01.gr  b-comp-cbv.gr  coeff-nat.gr  comp-coeffect-gen.gr  mult.gr
benchmarks/hilbert/: 02-i.gr  or3.gr
benchmarks/pull/: either-gen.gr  pair-bang.gr  pair-gen.gr
benchmarks/push/: func-bang.gr  func-gen.gr  func-nat.gr
benchmarks/vec/: b012-vec15.gr  vec10.gr  vec20.gr  vec5.gr
command-line-interface/: Main.hs
compiler/: CHANGELOG.md  README.md  granule-compiler.cabal  package.yaml
compiler/app/: Main.hs
docs/: style.css  template.html
examples/: Cake.gr  Capabilities.gr  Church.gr  CombinatoryLogic.gr  Database.gr  Database.gr.output  DependentSafeHead.gr  Door.gr  Files.gr  Files2.gr  Files2.gr.output  FilesBoxed.gr  Fold.gr  Free.gr  Ftree.gr  IO.gr  LeftPad.gr  LeftPad.gr.output  LeftPadShort.gr  LeftPadTutorial.gr  LeftPadTutorial.gr.output  NinetyNineProblems.gr  NonEmpty.gr  Secure.gr  Secure.gr.output  SecurityAlt.gr  Sessions.gr  Sessions.gr.output  Sessions2.gr  State.gr  ablist.gr  ablist.gr.output  borrowing.gr  case.gr  cata.gr  choice.gr  choice.gr.md  coeffect-poly.gr  cost.gr  effects_nondet.gr  (+73 more)
examples/broken/: README.md  adt.gr  case.gr  cast.gr  expr.gr  factoring.gr  filter.gr  float.gr  foldr.gr  gadt.gr  gex0.gr  gradingApproximation.gr  list.gr  map.gr  natEq.gr  natIx.gr  pair.gr  pairPull.gr  poly-map.gr  promote-list.gr  rec.gr  reuse-bounds.gr  securePair.gr  universal.gr  wild.gr
examples/errors/: badList.gr  badList2.gr  badMap.gr  badMap2.gr  bogus-include.gr  function-without-signature.gr  name-clash.gr
examples/good/: Files.gr  Files2.gr  bool.gr  breadth-first.gr  case.gr  dubList.gr  either.gr  eta.gr  exampleIO.gr  expr.gr  expr2.gr  fact.gr  filter.gr  foldr.gr  ifThenElse.gr  infix.gr  list.gr  maybe.gr  natIx.gr  non-empty-list.gr  one.gr  pair.gr  peano.gr  polarity.gr  poly.gr  postfix-joke.gr  postfix.gr  product.gr  range.gr  replicate.gr  scale.gr  secure.gr  secureIO.gr  sessions.gr  srepls.gr  string.gr  talk.gr  talk1.gr  tasty.gr  tlla.gr  (+2 more)
examples/illtyped/: README.md  adt.gr  badKind.gr  badPoly.gr  badPoly2.gr  bogusMap.gr  bool.gr  errorExample.gr  exactNat.gr  expr.gr  gradingError.gr  import.gr  include.gr  isEmpty.gr  nonLinearCase.gr  polarity.gr  poly.gr  polyo.gr  twoBox.gr  wild.gr
examples/simple/: simple3.gr
examples/tutorials/: popl.bib  popl.gr.md  popl.html
frontend/: changelog  granule-frontend.cabal  help.md  package.yaml
frontend/tests/: doctest.hs
granule-base/: Prelude.gr
interpreter/: granule-interpreter.cabal  package.yaml
interpreter/app/: Main.hs
interpreter/src/: Main.hs
interpreter/tests/: Golden.hs
lib/: Prelude.gr
repl/: Main.hs  Queue.hs  README.md  ReplError.hs  ReplParser.hs  granule-repl.cabal  package.yaml
repl/app/: ReplParser.hs
runtime/: granule-runtime.cabal  package.yaml
server/: README.md  granule-language-server.cabal  package.yaml
server/app/: Main.hs
source/: Context.hs  Eval.hs  Queue.hs  Repl.hs  Utils.hs  help.md
source/Checker/: Checker.hs  Coeffects.hs  Constraints.hs  Exhaustivity.hs  Kinds.hs  LaTeX.hs  Monad.hs  Patterns.hs  Predicates.hs  Primitives.hs  Substitutions.hs  Types.hs
source/Repl/: Queue.hs  README.md  Repl.hs  ReplError.hs  ReplParser.hs
source/Syntax/: Def.hs  Desugar.hs  Expr.hs  Freshening.hs  Helpers.hs  Identifiers.hs  Lexer.x  Parser.y  Pattern.hs  Pretty.hs  Type.hs
src/: AlexToken.x  Checker.hs  Context.hs  Eval.hs  Expr.hs  HappyParser.y  Main.hs  Type.hs
src/Checker/: Checker.hs  Coeffects.hs  Compile.hs  Constraints.hs  Context.hs  Environment.hs  Types.hs
src/Syntax/: Desugar.hs  Expr.hs  FirstParameter.hs  Lexer.x  Parser.y  Pretty.hs
tests/: doctest.hs
tests/Checker/: CheckerSpec.hs  CompileSpec.hs  EnvironmentSpec.hs  TypeSpec.hs  TypesSpec.hs
tests/Syntax/: ExprSpec.hs
tests/hspec/: ContextSpec.hs
work-in-progress/: Choice.gr  Database.gr  Fractional.gr  Free.gr  FreeNew.gr  Graph.gr  Irrel.gr  LeftPad.gr  Parallel.gr  Parse.gr  PropositionalEquality.gr  PropositionalEqualityGen.gr  README.md  State.gr  Vec.gr  ablist.gr  approx.gr  approximations.gr  badness.gr  balanced.gr  bencharray.gr  call-by-value-analysis.gr  cartesian.gr  case-shadowing.gr  case.gr  coalgebra.gr  copyarray.gr  database2.gr  deletearray.gr  dubList.gr  dyn.gr  error.gr  existential-nat.gr  existential.gr  existentialNat.gr  exists.gr  fact.gr  falsifiable.gr  filter.gr  filter2.gr  (+50 more)
work-in-progress/locality/: examples.gr  examples.ml  notes.md
work-in-progress/security/: ex1.gr  ex2.gr  neg0.gr  neg1.gr  neg2.gr  neg3.gr  neg4.gr  neg5.gr  neg6.gr  (+8 more)
(+1583 files in other folders)
