name:           gram
version:        0.2.0.0
cabal-version:  >= 1.2
License:        BSD3
Author:         Dominic Orchard
Synopsis:       The Gram type checker and interpreter
Build-Type:     Simple

Executable gram
  Main-Is:        Main.hs
  Other-modules:  Syntax.Lexer
                  Syntax.Parser
                  Checker.Checker
                  Checker.Coeffects
                  Checker.Constraints
                  Checker.Environment
                  Checker.Types
                  Syntax.Desugar
                  Syntax.Expr
                  Syntax.Pretty
                  Eval
                  Context
  Hs-Source-Dirs: src
  Build-Depends:  base >= 4, array, mtl>=2.2.1, transformers>=0.5, sbv >= 7.3, containers
  Build-Tools:    alex, happy
  GHC-Options:    -Wall

test-suite spec
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       tests, src
  other-modules:        Syntax.ExprSpec
                        Checker.TypesSpec
                        Checker.EnvironmentSpec
                        Checker.CheckerSpec
                        Syntax.Parser
                        Checker.Checker
                        Checker.Coeffects
                        Checker.Constraints
                        Checker.Environment
                        Checker.Types
                        Context
                        Syntax.Expr
                        Syntax.Pretty
                        Syntax.Lexer
                        Syntax.Desugar
  build-depends:        base >= 4.6 && < 5,
                        array,
                        filemanip,
                        mtl>=2.2.1,
                        transformers>=0.5,
                        sbv >= 7.3,
                        containers,
                        hspec >= 2.4.3,
                        QuickCheck >= 2.8 && < 3
  Build-Tools:          alex, happy
  GHC-Options:          -Wall
