cabal-version:  3.4
name:           granule
version:        0.9.6.0

synopsis:       The Granule Language
description:    A research language based on graded modal types
homepage:       https://github.com/granule-project/granule#readme
bug-reports:    https://github.com/granule-project/granule/issues
author:         Dominic Orchard, Vilem-Benjamin Liepelt, Harley Eades III, Jack Hughes, Preston Keel, Danielle Marshall, Michael Vollmer
maintainer:     Dominic Orchard, Vilem-Benjamin Liepelt, Harley Eades III, Jack Hughes, Preston Keel, Danielle Marshall, Michael Vollmer
category:       Compiler
copyright:      2018-22 authors
license:        BSD-3-Clause
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/granule-project/granule

common granule-default-lang
  default-language: Haskell2010
  default-extensions:
      ImplicitParams
      ViewPatterns
      LambdaCase
      TupleSections
      NamedFieldPuns
      OverloadedStrings
      RecordWildCards
      ScopedTypeVariables
      FlexibleContexts
      ConstraintKinds

common granule-dependencies
  build-depends:
      array
    , base >=4.10 && <5
    , bifunctors
    , clock >= 0.8
    , containers
    , directory
    , filepath
    , mtl >=2.2.1
    , text >=1.1.2
    , time
    , transformers >=0.5

common granule-ghc-warnings
  ghc-options:
    -Wall
    -Werror
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wno-unused-matches
    -Wno-name-shadowing
    -Wno-type-defaults
    -fno-warn-unticked-promoted-constructors
    -fno-warn-partial-type-signatures

library frontend
  import: granule-default-lang
  import: granule-dependencies
  import: granule-ghc-warnings
  exposed-modules:
      Data.Bifunctor.Foldable
      Language.Granule.Checker.Checker
      Language.Granule.Checker.Coeffects
      Language.Granule.Checker.Constraints
      Language.Granule.Checker.Constraints.SNatX
      Language.Granule.Checker.DataTypes
      Language.Granule.Checker.Flatten
      Language.Granule.Checker.Ghost
      Language.Granule.Checker.LaTeX
      Language.Granule.Checker.Monad
      Language.Granule.Checker.Patterns
      Language.Granule.Checker.Predicates
      Language.Granule.Checker.Primitives
      Language.Granule.Checker.Kinding
      Language.Granule.Checker.Substitution
      Language.Granule.Checker.SubstitutionContexts
      Language.Granule.Checker.TypeAliases
      Language.Granule.Checker.Types
      Language.Granule.Checker.Variables
      Language.Granule.Syntax.Def
      Language.Granule.Syntax.Expr
      Language.Granule.Syntax.Helpers
      Language.Granule.Syntax.FirstParameter
      Language.Granule.Syntax.Annotated
      Language.Granule.Syntax.Identifiers
      Language.Granule.Syntax.Lexer
      Language.Granule.Syntax.Parser
      Language.Granule.Syntax.Pattern
      Language.Granule.Syntax.Pretty
      Language.Granule.Syntax.Preprocessor
      Language.Granule.Syntax.Preprocessor.Ascii
      Language.Granule.Syntax.Preprocessor.Latex
      Language.Granule.Syntax.Preprocessor.Markdown
      Language.Granule.Syntax.Span
      Language.Granule.Syntax.Type
      Language.Granule.Synthesis.Builders
      Language.Granule.Synthesis.Contexts
      Language.Granule.Synthesis.DebugTree
      Language.Granule.Synthesis.LinearHaskell
      Language.Granule.Synthesis.Monad
      Language.Granule.Synthesis.Splitting
      Language.Granule.Synthesis.Common
      Language.Granule.Synthesis.SynthLinearBase
      Language.Granule.Synthesis.Synth
      Language.Granule.Synthesis.RewriteHoles
      Language.Granule.Context
      Language.Granule.Utils
  other-modules:
      Language.Granule.Checker.CoeffectsTypeConverter
      Language.Granule.Checker.Constraints.Compile
      Language.Granule.Checker.Constraints.SFrac
      Language.Granule.Checker.Constraints.SymbolicGrades
      Language.Granule.Checker.Effects
      Language.Granule.Checker.Exhaustivity
      Language.Granule.Checker.NameClash
      Language.Granule.Checker.Normalise
      Language.Granule.Checker.Simplifier
      Language.Granule.Syntax.SecondParameter
      Language.Granule.Synthesis.Deriving
      Language.Granule.Synthesis.Refactor
      Text.Reprinter
  hs-source-dirs:
      frontend/src
  build-tool-depends:
      alex:alex
    , happy:happy
  build-depends:
      Glob
    , blaze-html
    , control-monad-omega
    , data-ordlist
    , haskell-src-exts
    , logict >=0.7.1.0
    , monad-memo
    , raw-strings-qq
    , sbv >=8.5 && <10
    , split
    , syb >=0.6
    , syz >=0.2.0.0
    , text-replace

test-suite frontend-spec
  import: granule-default-lang
  import: granule-dependencies
  import: granule-ghc-warnings
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Data.Bifunctor.FoldableSpec
      Language.Granule.Checker.CheckerSpec
      Language.Granule.Checker.MonadSpec
      Language.Granule.Checker.SubstitutionsSpec
      Language.Granule.Checker.TypesSpec
      Language.Granule.Syntax.ExprSpec
      Language.Granule.Synthesis.CommonSpec
      Language.Granule.Synthesis.SplittingSpec
      Language.Granule.Synthesis.SynthSpec
  hs-source-dirs:
      frontend/tests/hspec
  build-depends:
      QuickCheck
    , granule:frontend
    , hspec
    , syz

library interpreter
  import: granule-default-lang
  import: granule-dependencies
  import: granule-ghc-warnings
  exposed-modules:
      Language.Granule.Interpreter
      Language.Granule.Interpreter.Eval
      Language.Granule.Interpreter.Desugar
  other-modules:
      Language.Granule.Doc
      Paths_granule
  autogen-modules:
      Paths_granule
  hs-source-dirs:
      interpreter/src
  build-depends:
      Glob
    , concurrent-extra
    , extra
    , gitrev
    , granule:frontend
    , granule:runtime
    , logict >=0.7.1.0
    , optparse-applicative

executable gr
  import: granule-default-lang
  import: granule-dependencies
  import: granule-ghc-warnings
  main-is: Language/Granule/Interpreter.hs
  other-modules:
      Language.Granule.Doc
      Language.Granule.Interpreter.Desugar
      Language.Granule.Interpreter.Eval
      Paths_granule
  autogen-modules:
      Paths_granule
  hs-source-dirs:
      interpreter/src
  build-depends:
      Glob
    , concurrent-extra
    , extra
    , gitrev
    , granule:frontend
    , granule:interpreter
    , granule:runtime
    , logict >=0.7.1.0
    , optparse-applicative

executable grls
  import: granule-default-lang
  import: granule-dependencies
  import: granule-ghc-warnings
  main-is: Language/Granule/Server.hs
  hs-source-dirs:
      server/app
  build-depends:
      Glob
    , data-default
    , granule:frontend
    , granule:interpreter
    , lens
    , lsp
    , split

test-suite gr-golden
  import: granule-default-lang
  import: granule-dependencies
  import: granule-ghc-warnings
  type: exitcode-stdio-1.0
  main-is: Golden.hs
  hs-source-dirs:
      interpreter/tests
  build-depends:
      Diff
    , Glob
    , concurrent-extra
    , extra
    , gitrev
    , granule:frontend
    , granule:interpreter
    , granule:runtime
    , logict >=0.7.1.0
    , optparse-applicative
    , strict
    , tasty
    , tasty-golden

executable grepl
  import: granule-default-lang
  import: granule-dependencies
  import: granule-ghc-warnings
  main-is: Language/Granule/Main.hs
  other-modules:
      Language.Granule.Queue
      Language.Granule.ReplError
      Language.Granule.ReplParser
      Paths_granule
  autogen-modules:
      Paths_granule
  hs-source-dirs:
      repl/app
  build-depends:
      Glob
    , filemanip
    , granule:frontend
    , granule:interpreter
    , haskeline
    , parsec

library runtime
  import: granule-default-lang
  import: granule-dependencies
  import: granule-ghc-warnings
  exposed-modules:
      Language.Granule.Runtime
  hs-source-dirs:
      runtime/src
  build-depends:
      Glob
    , criterion
    , extra
    , gitrev
    , granule:frontend
    , haskell-src-exts
    , logict >=0.7.1.0
    , optparse-applicative
    , silently

library compiler
  import: granule-default-lang
  import: granule-dependencies
  import: granule-ghc-warnings
  exposed-modules:
      Language.Granule.Compiler.Error
      Language.Granule.Compiler.HSCodegen
      Language.Granule.Compiler.Util
  hs-source-dirs:
      compiler/src
  build-depends:
      Glob
    , criterion
    , extra
    , gitrev
    , granule:frontend
    , granule:runtime
    , haskell-src-exts
    , logict >=0.7.1.0
    , optparse-applicative
    , silently


executable grc
  import: granule-default-lang
  import: granule-dependencies
  import: granule-ghc-warnings
  main-is: Language/Granule/Compiler.hs
  other-modules:
      Paths_granule
  autogen-modules:
      Paths_granule
  hs-source-dirs:
      compiler/app
  build-depends:
      Glob
    , criterion
    , extra
    , gitrev
    , granule:compiler
    , granule:frontend
    , granule:runtime
    , haskell-src-exts
    , logict >=0.7.1.0
    , optparse-applicative
    , silently

executable grenchmark
  import: granule-default-lang
  import: granule-dependencies
  import: granule-ghc-warnings
  main-is: Language/Granule/Main.hs
  other-modules:
      Language.Granule.Benchmarks
      Language.Granule.StdError
  hs-source-dirs:
      benchmark/src
  build-depends:
      granule:frontend
    , granule:interpreter
    , process
    , strict
